fix(theme-default): upgrade version and fix flex wrap header

--- a/packages/theme-default/src/components/calendar/header/calendar-header.scss
+++ b/packages/theme-default/src/components/calendar/header/calendar-header.scss
@@ -18,6 +18,7 @@
 .sx__calendar-header-content {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: var(--sx-spacing-padding4);
   justify-content: space-between;
   flex: 1 0 0;
